<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/regestration_bacground"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/comic"
        android:text="@string/registration"
        android:textColor="@color/black"
        android:textSize="30sp"
        tools:ignore="UnusedAttribute" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_text_registration_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/bottom_navigation_notification_margin_left"
                android:fontFamily="@font/comic"
                android:ems="10"
                android:hint="@string/enter_login"
                android:inputType="text"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/edit_text_registration_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/bottom_navigation_notification_margin_left"
                android:ems="10"
                android:fontFamily="@font/comic"
                android:hint="@string/enter_password"
                android:inputType="text"
                tools:ignore="UnusedAttribute" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/edit_text_registration_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/bottom_navigation_notification_margin_left"
                android:ems="10"
                android:fontFamily="@font/comic"
                android:hint="@string/enter_email"
                android:inputType="text"
                tools:ignore="UnusedAttribute" />


        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/button_registrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/comic"
        android:text="@string/registrate"
        android:textStyle="bold"
        tools:ignore="UnusedAttribute"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="231dp" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/comic"
        android:text="@string/back"
        android:textStyle="bold"
        tools:ignore="UnusedAttribute"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="231dp" />

</LinearLayout>